[package]
name = "vault"
version = "0.1.0"
edition = "2021"
description = "ZBTC/ZUSD Vault with 70% LTV"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
thiserror = "1.0.40"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"

[lib]
crate-type = ["cdylib", "lib"]
